# src/routers/index.ts
@@ -5,6 +5,8 @@ import { chatMessageRouter } from "./chat.message.router";
 import { chatUserRouter } from "./chat.user.router";
 import { invoiceRouter } from "./invoice.router";
 import { paymentRouter } from "./payment.router";
+import { productRouter } from "./product.router";
+import { userPlanRouter } from "./user.plan.router";
 
 export const routes = express.Router();
 
@@ -14,3 +16,5 @@ routes.use("/invoice", invoiceRouter);
 routes.use("/payment", paymentRouter);
 routes.use("/chat_messages", chatMessageRouter);
 routes.use("/chat_user", chatUserRouter);
+routes.use("/product", productRouter);
+routes.use("/user_plan", userPlanRouter);
