# src/routers/user.plan.router.ts
@@ -5,6 +5,7 @@ const router = express.Router();
 
 router.get("/:id", requireRole("USER"), userPlanController.getUserPlansById);
 router.get("/:id", requireRole("USER"), userPlanController.getUserPlanById);
+router.put("/:id", requireRole("USER"), userPlanController.updateUserPlanById);
 router.post("/:id", requireRole("USER"), userPlanController.generateApiKeyById);
 
 export const userPlanRouter = router;
